Update summary of functions page in Lab 2 to not call non-existant package "package_name"

--- a/Lab2/04-summary.qmd
+++ b/Lab2/04-summary.qmd
@@ -3,11 +3,11 @@
 ## [Packages](01-packages.qmd#sec-packages) {.unnumbered}
 
 ```{r, eval=FALSE}
-install.packages("package_name")
+install.packages("")
 ```
 
 ```{r, eval=FALSE}
-library(package_name)
+library()
 ```
 
 ## [Arrays](02-data.qmd#sec-arrays) {.unnumbered}
