Add additional labs to homepage.

--- a/index.qmd
+++ b/index.qmd
@@ -11,3 +11,9 @@ This site contains the content for each lab. Click a link below to view the lab 
 - [Lab 1](https://iain99.github.io/S2S-Labs/Lab1/)
 - [Lab 2](https://iain99.github.io/S2S-Labs/Lab2/)
 - [Lab 3](https://iain99.github.io/S2S-Labs/Lab3/)
+- [Lab 4](https://iain99.github.io/S2S-Labs/Lab4/)
+- [Lab 5](https://iain99.github.io/S2S-Labs/Lab5/)
+- [Lab 6](https://iain99.github.io/S2S-Labs/Lab6/)
+- [Lab 8](https://iain99.github.io/S2S-Labs/Lab8/)
+- [Lab 9](https://iain99.github.io/S2S-Labs/Lab9/)
+- [Lab 10](https://iain99.github.io/S2S-Labs/Lab10/)
