--- a/Lab1/index.qmd
+++ b/Lab1/index.qmd
@@ -25,13 +25,14 @@ This is where the question text would go.
 :::
 -->
 ```
+
 Welcome to the first S2S lab! The contents of these labs are based on the textbook [***Probability and Statistics with R***](https://read.kortext.com/reader/pdf/92741/A){target="_blank"} by Ugarte, Militino and Arnholt. Reference will be made to this textbook throughout the labs and it's a great place to find further details and examples of the sort of things we'll be looking at.
 
 ```{r PASWR2-image, echo=FALSE, fig.align='center', out.width='40%'}
 include_graphics("Images/PASWR2.png")
 ```
 
-Over the course of the semester, we will have 10 lab slots - one every week on a Wednesday. The labs offer an opportunity to practise using RStudio yourself and follow along with the code being demonstrated. After all lab sessions have occurred each week, a complete version of that week's lab, showing solutions to all the tasks as well as separate solutions to the Further Exercises, will be made available on the [S2S Moodle page](https://moodle.gla.ac.uk/course/view.php?id=43654){target="_blank"}.
+Over the course of the semester, we will have 10 lab slots - one every week on a Wednesday. The labs offer an opportunity to practise using RStudio yourself and follow along with the code being demonstrated. After all lab sessions have occurred each week, a complete version of that week's lab, showing solutions to all the tasks as well as separate solutions to the Further Exercises, will be made available on the S2S Moodle page.
 
 The first three weeks of labs will follow [Chapter 1 What Is R?](https://read.kortext.com/reader/pdf/92741/1){target="_blank"} of *Probability and Statistics with R* and provide an introduction to the basics of using R to work with data. You can use this chapter to find extra details of what's covered in the first three labs but everything that is examinable will be covered in the labs themselves.
 
