--- a/Lab2/02-data.qmd
+++ b/Lab2/02-data.qmd
@@ -13,11 +13,11 @@ library(ggplot2)
 library(tidyverse)
 ```
 
-R uses various different types of 'data structures' which are really just ways to store information of varying types. A lot of the data structures R uses are defined in terms of vectors, so it is important you are familiar with constructing and manipulating vectors in R (see [S2S Lab 1](https://moodle.gla.ac.uk/pluginfile.php/9072880/mod_resource/content/3/index.html){target="_blank"}).
+R uses various different types of 'data structures' which are really just ways to store information of varying types. A lot of the data structures R uses are defined in terms of vectors, so it is important you are familiar with constructing and manipulating vectors in R (see [S2S Lab 1](../Lab1/){target="_blank"}).
 
 Some of the common data structures we will become familiar with are;
 
--   [**vectors**](https://moodle.gla.ac.uk/pluginfile.php/9072880/mod_resource/content/3/01-vectors.html){target="_blank"} (covered in [Lab 1](https://moodle.gla.ac.uk/pluginfile.php/9072880/mod_resource/content/3/index.html){target="_blank"})
+-   [**vectors**](../Lab1/01-vectors.html){target="_blank"} (covered in [Lab 1](../Lab1/){target="_blank"})
 -   [**arrays**](02-data.qmd#sec-arrays)
 -   [**matrices**](02-data.qmd#sec-mat)
 -   [**factors**](02-data.qmd#sec-fact)
