--- a/index.qmd
+++ b/index.qmd
@@ -7,7 +7,7 @@ format: html
 
 This site contains the content for each lab. Click a link below to view the lab material.
 
-- [Lab 0](https://iain99.github.io/S2S-Labs/Lab0/)
+- [Lab 0](../Lab0/)
 - [Lab 1](https://iain99.github.io/S2S-Labs/Lab1/)
 - [Lab 2](https://iain99.github.io/S2S-Labs/Lab2/)
 - [Lab 3](https://iain99.github.io/S2S-Labs/Lab3/)
