--- a/index.qmd
+++ b/index.qmd
@@ -7,13 +7,13 @@ format: html
 
 This site contains the content for each lab. Click a link below to view the lab material.
 
-- [Induction Lab](../Lab0/)
-- [Lab 1](../Lab1/)
-- [Lab 2](../Lab2/)
-- [Lab 3](../Lab3/)
-- [Lab 4](../Lab4/)
-- [Lab 5](../Lab5/)
-- [Lab 6](../Lab6/)
-- [Lab 8](../Lab8/)
-- [Lab 9](../Lab9/)
-- [Lab 10](../Lab10/)
+- [Induction Lab](Lab0/)
+- [Lab 1](Lab1/)
+- [Lab 2](Lab2/)
+- [Lab 3](Lab3/)
+- [Lab 4](Lab4/)
+- [Lab 5](Lab5/)
+- [Lab 6](Lab6/)
+- [Lab 8](Lab8/)
+- [Lab 9](Lab9/)
+- [Lab 10](Lab10/)
