--- a/Lab1Live/index.qmd
+++ b/Lab1Live/index.qmd
@@ -26,7 +26,7 @@ This is where the question text would go.
 -->
 ```
 
-Welcome to the first S2S lab! The contents of these labs are based on the textbook [***Probability and Statistics with R***](https://read.kortext.com/reader/pdf/92741/A){target="_blank"} by Ugarte, Militino and Arnholt. Reference will be made to this textbook throughout the labs and it's a great place to find further details and examples of the sort of things we'll be looking at.
+Welcome to the first S2S lab! The contents of these labs are based on the textbook [***Probability and Statistics with R***](https://www-taylorfrancis-com.ezproxy1.lib.gla.ac.uk/reader/read-online/59b6523e-f921-4599-8d9e-20af1058199a/book/epub?context=ubx){target="_blank"} by Ugarte, Militino and Arnholt. Reference will be made to this textbook throughout the labs and it's a great place to find further details and examples of the sort of things we'll be looking at.
 
 ```{r PASWR2-image, echo=FALSE, fig.align='center', out.width='40%'}
 include_graphics("Images/PASWR2.png")
@@ -34,13 +34,13 @@ include_graphics("Images/PASWR2.png")
 
 Over the course of the semester, we will have 10 lab slots - one every week on a Wednesday. The labs offer an opportunity to practise using RStudio yourself and follow along with the code being demonstrated. After all lab sessions have occurred each week, a complete version of that week's lab, showing solutions to all the tasks as well as separate solutions to the Further Exercises, will be made available on the S2S Moodle page.
 
-The first three weeks of labs will follow [Chapter 1 What Is R?](https://read.kortext.com/reader/pdf/92741/1){target="_blank"} of *Probability and Statistics with R* and provide an introduction to the basics of using R to work with data. You can use this chapter to find extra details of what's covered in the first three labs but everything that is examinable will be covered in the labs themselves.
+The first three weeks of labs will follow **Chapter 1 What Is R?** of *Probability and Statistics with R* and provide an introduction to the basics of using R to work with data. You can use this chapter to find extra details of what's covered in the first three labs but everything that is examinable will be covered in the labs themselves.
 
 There are two pieces of assessment associated with these labs; an R assessment and a Lab Report. More details of these will be provided closer to the time.
 
-## Class responses
+## Class responses {.unnumbered}
 
-[![](Images/Mentimeter.svg){width="60%" fig-align="center"}](https://www.menti.com/){target="_blank"}
+[![](Images/Mentimeter.svg){width="60%" fig-align="center"}](https://www.menti.com/)
 
 Throughout the lab, there will be some interactive questions. We will use Mentimeter to gather the class' answers. The solutions to all these questions will be available in the complete version of the lab, released later.
 
