--- a/Lab3Live/02-data.qmd
+++ b/Lab3Live/02-data.qmd
@@ -19,7 +19,7 @@ education <- read.csv(file = "Data/edu.csv", na.strings = "*", fileEncoding = 'U
 
 ## Checking variable types {#sec-checking}
 
-Once a data frame has been read into R, it is always a good idea to examine its contents using the `str()` function to see the **structure** of the data object. We have already seen the `str()` function in [Lab 2](https://moodle.gla.ac.uk/pluginfile.php/9073095/mod_resource/content/2/02-data.html#sec-df){target="_blank"} but as a reminder, it shows us the type of vector each column in a data frame is saved as.
+Once a data frame has been read into R, it is always a good idea to examine its contents using the `str()` function to see the **structure** of the data object. We have already seen the `str()` function in [Lab 2](../Lab2/02-data.html#sec-df){target="_blank"} but as a reminder, it shows us the type of vector each column in a data frame is saved as.
 
 Running the following code tells us that the four variables `ldl`, `hdl`, `trig` and `age` are all integer vectors and that `id`, `gender` and `smoke` are character vectors.
 
@@ -37,7 +37,7 @@ str(chol)
 
 Because `gender` only takes the values `"female"` or `"male"` in this case, and `smoke` is categorised into three levels, `"no"`, `"ex-smoker"` and `"current"`, it makes sense to treat both these variables as factors instead of character vectors.
 
-We can use what we learned in [Lab 2](https://moodle.gla.ac.uk/pluginfile.php/9073095/mod_resource/content/2/02-data.html#sec-fact){target="_blank"} to change these variables into factors. 
+We can use what we learned in [Lab 2](../Lab2/02-data.html#sec-fact){target="_blank"} to change these variables into factors. 
 
 ::: panel-tabset
 ## R Code
@@ -143,7 +143,7 @@ education$level <- factor(x = education$level,
 
 ---
 
-Refer to [Section 1.11 Working with Data](https://read.kortext.com/reader/pdf/92741/47){target="_blank"} of *Probability and Statistics with R* to learn more about checking the setup of a data set.
+Refer to **Section 1.11 Working with Data** of *Probability and Statistics with R* to learn more about checking the setup of a data set.
 
 
 ## Dealing with `NA` values
@@ -307,7 +307,7 @@ Note that we use `!` in front of `is.na()` so that the logical vector returned h
 
 ---
 
-You can look at further examples of dealing with missing data in [Section 1.11.1 Dealing with `NA` Values](https://read.kortext.com/reader/pdf/92741/51){target="_blank"} of *Probability and Statistics with R*.
+You can look at further examples of dealing with missing data in **Section 1.11.1 Dealing with `NA` Values** of *Probability and Statistics with R*.
 
 
 ## Sorting data frames
@@ -439,14 +439,14 @@ education[order(education$pupils, decreasing = TRUE), ]
 
 ---
 
-Look at [Section 1.11.3 Sorting a Data Frame by One or More of Its Columns](https://read.kortext.com/reader/pdf/92741/55){target="_blank"} of *Probability and Statistics with R* to learn more about sorting and ordering data sets.
+Look at **Section 1.11.3 Sorting a Data Frame by One or More of Its Columns** of *Probability and Statistics with R* to learn more about sorting and ordering data sets.
 
 
 ## Subsetting
 
 When we want to only view particular elements of a data frame, this is known as subsetting the data. This is useful if you're dealing with extremely large data sets and only want to analyse female subjects, or subjects who are all from the same country for example. Subsetting the data means that you would extract only these subjects that you are actually interested in.
 
-A useful function for extracting elements of a data frame is the function `subset()` (which we first saw in [Lab 1](https://moodle.gla.ac.uk/pluginfile.php/9072880/mod_resource/content/5/01-vectors.html#filter){target="_blank"}). This allows us to extract the elements of a data frame which meet particular conditions. The arguments that `subset()` takes are:
+A useful function for extracting elements of a data frame is the function `subset()` (which we first saw in [Lab 1](../Lab1/01-vectors.html#sec-filter){target="_blank"}). This allows us to extract the elements of a data frame which meet particular conditions. The arguments that `subset()` takes are:
 
 * `x =`: this is the data frame that we want to extract particular elements from.
 * `subset =`: this is a logical statement which determines the elements to keep in the subsetted data frame.
@@ -546,7 +546,7 @@ subset(x = education,
 
 ---
 
-You can read more about subsetting data frames in [Section 1.12 Using Logical Operators with Data Frames](https://read.kortext.com/reader/pdf/92741/58){target="_blank"} in *Probability and Statistics with R*.
+You can read more about subsetting data frames in **Section 1.12 Using Logical Operators with Data Frames** in *Probability and Statistics with R*.
 
 
 ## Summarising data
@@ -710,7 +710,7 @@ tapply(X = education$teachers, INDEX = list(education$level),
 
 ---
 
-To read more on creating tables and summarising data in R, see Sections [1.13 Tables](https://read.kortext.com/reader/pdf/92741/62){target="_blank"} and [1.14 Summarizing Functions](https://read.kortext.com/reader/pdf/92741/66){target="_blank"} in *Probability and Statistics with R*.
+To read more on creating tables and summarising data in R, see Sections **1.13 Tables** and **1.14 Summarizing Functions** in *Probability and Statistics with R*.
 
 
 ## Creating variables
@@ -839,7 +839,7 @@ Note that `tail()` is a function very similar to `head()`, but rather than showi
 
 ---
 
-Sections [1.11.2 Creating New Variables in a Data Frame](https://read.kortext.com/reader/pdf/92741/54){target="_blank"} and [1.13 Tables](https://read.kortext.com/reader/pdf/92741/62){target="_blank"} of *Probability and Statistics with R* describe how to create new variables.
+Sections **1.11.2 Creating New Variables in a Data Frame** and **1.13 Tables** of *Probability and Statistics with R* describe how to create new variables.
 
 See @sec-cut to learn how to create a new variable in a data frame by breaking an existing variable into different levels.
 
